# algoviz

./: .gitignore  FULL_HYDRA_ZEN_IMPLEMENTATION_PLAN.md  GRID_DATA_FIXTURES_IMPLEMENTATION.md  HYDRA_ZEN_COMPLIANCE_AUDIT.md  HYDRA_ZEN_REFACTOR_PLAN.md  Implementation_Plan.md  LICENSE  NEXT_STEPS.md  PHASE_1_4_2_HYDRA_ZEN_ADDENDUM.md  README.md  STEP_1_3_COMPLETION_REPORT.md  STEP_1_4_COMPLETION_REPORT.md  TEST_SCENARIO_FIXTURES_REFACTORING.md  agent_instructions.md  agent_prompt_generator.py  agent_runner.py  agent_template.md  architecture_diagram.md  collect_issues.py  justfile  playground.py  pyproject.toml  render_cli.py  render_pure_zen.py  render_zen_cli.py  show_tool_data.py  simple_zen_demo.py  summarize_issues.py  test_final_solution.py  test_grid_fixtures.py  test_hydra_zen_store_behavior.py  test_prompt.md  test_store_vs_zenstore.py  validate_step1.py  verify_issues.py
.cursor/rules/: cleanup.mdc
configs/: bfs_large_maze.yaml  config.yaml
configs/render/: hd.yaml
configs/scenario/: maze_large.yaml  maze_small.yaml  weighted_graph.yaml
configs/scene/: bfs_dynamic.yaml  bfs_pathfinding.yaml
configs/theme/: dark.yaml  default.yaml  high_contrast.yaml
configs/timing/: draft.yaml  fast.yaml  normal.yaml
demo/: bad_config.yaml  error_test.yaml  merged_config.yaml  scenario.yaml  theme.yaml  timing.yaml  voiceover.yaml
grids/: demo.yaml  test_maze.yaml  test_simple.yaml  test_unreachable.yaml
ideas/: manim_plugins.md  preview_partial_rendering.md
planning/: AGLOViz_Design_Rendering_Export.md  ALGOViz_Design_Director.md  ALGOViz_Design_Plugin_System.md  ALGOViz_Design_Storyboard_DSL.md  ALGOViz_Design_TimingConfig.md  ALGOViz_PRD.md  ALGOViz_Scenario_Theme_Merge_Precedence.md
planning/rewrite_plan/: v2_assessment.md  v2_plan.md  v2_prompt_templates.md
planning/v1/: ALGOViz_Design_Adapters_VizEvents.md  ALGOViz_Design_Config_System.md  ALGOViz_Design_Widgets_Registry.md  ALGOViz_Error_Taxonomy.md  ALGOViz_SDD.md  README_DOCS.md
planning/v2/: ALGOViz_Design_Adapters_VizEvents_v2.md  ALGOViz_Design_CLI_DevUX.md  ALGOViz_Design_Config_System.md  ALGOViz_Design_DI_Strategy.md  ALGOViz_Design_DI_Strategy_v2.md  ALGOViz_Design_Director_v2.md  ALGOViz_Design_Plugin_System_v2.md  ALGOViz_Design_Rendering_Export.md  ALGOViz_Design_Storyboard_DSL_v2.md  ALGOViz_Design_Voiceover.md  ALGOViz_Design_Widget_Architecture_v2.md  ALGOViz_Design_Widgets_Registry_v2.md  ALGOViz_Error_Taxonomy.md  ALGOViz_PRD_v2.md  ALGOViz_SDD_v2.md  ALGOViz_Vision_Goals.md  README_DOCS.md
previews/: timing_report.csv  timing_report.json
scripts/: fix_brand_naming.py  validate_hydra_zen_compliance.py  validate_migration_completeness.py
src/agloviz/: __init__.py
src/agloviz/adapters/: __init__.py  bfs.py  protocol.py  registry.py
src/agloviz/cli/: __init__.py  app.py  error_display.py  render.py  render_app.py  render_app_zen.py  render_hydra_zen.py  render_pure_zen.py  render_zen_simple.py
src/agloviz/config/: __init__.py  builders.py  hydra_zen.py  manager.py  models.py  orchestrator_factory.py  store.py  store_manager.py  timing.py
src/agloviz/core/: __init__.py  actions.py  director.py  errors.py  events.py  scene.py  (+6 more)
storyboards/: README.md  bfs_demo.yaml
test_output/: timing_report.csv  timing_report.json
test_render/: timing_report.csv  timing_report.json
tests/: conftest.py
tests/data/: bfs_golden_events.json
tests/integration/: test_director_integration.py
tests/performance/: test_director_performance.py
tests/system/: __init__.py
tests/unit/: __init__.py  test_advanced_scene_config.py  test_basic_scene_config.py  test_config_manager.py  test_config_manager_advanced.py  test_config_models.py  test_config_models_new.py  test_config_parameter_resolution.py  test_configstore_scene_registration.py  test_correct_yaml_template_flow.py  test_event_parameter_resolution.py  test_full_hydra_zen_cli.py  test_hydra_zen_step1.py  test_hydra_zen_step2.py  test_manim_integration_basic.py  test_omegaconf_template_resolution.py  test_scene_config_builders.py  test_scene_config_instantiation.py  test_scene_configuration_error_handling.py  test_scene_configuration_integration.py  test_scene_configuration_system.py  test_scene_engine_basic.py  test_scene_engine_hydra_zen.py  test_scene_engine_parameter_resolution.py  test_scene_engine_widgets.py  test_scene_engine_yaml.py  test_scene_workflow_advanced.py  test_scene_workflow_basic.py  test_system_orchestrator.py  test_timing_config.py  test_timing_parameter_resolution.py  test_timing_tracker.py  test_version.py  test_yaml_basic.py  test_yaml_dynamic.py  test_yaml_pathfinding.py  test_yaml_timing.py  test_yaml_timing_simple.py  test_yaml_to_event_resolution_end_to_end.py
worked/: AI_CODER_CLEANUP_PLAN.md  BFS_ADAPTER_WRAPPER_FIXTURES_IMPLEMENTATION.md  BFS_POLLUTION_AUDIT_REPORT.md  DETAILED_IMPLEMENTATION_PLAN.md  DIRECTOR_IMPLEMENTATION.md  HYDRA_ZEN_FIRST_MIGRATION_PLAN.md  HYDRA_ZEN_SCENE_CONFIG_ANALYSIS.md  MIGRATION_TO_FULL_HYDRA_ZEN.md  PHASE_1_4_2_IMPLEMENTATION_PLAN.md  SCENARIO_CONFIG_FIXTURES_IMPLEMENTATION.md  STEP_1_2_COMPLETION_REPORT.md  TEST_FIXES_COMPLETION_REPORT.md  demo_hydra_zen_cli.py  test_best_approach.py  test_final_solution.py  test_grid_fixtures.py  test_store_vs_zenstore.py
(+92 files in other folders)
